syntax = "proto3";

package auth;

option go_package = "example.com/proto/auth";

service Auth {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string token = 1;
}
